--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rehype-preset-minify": "6.0.0",
     "rehype-prism-plus": "^1.1.3",
     "rehype-slug": "^5.0.0",
+    "remark": "^14.0.2",
     "remark-footnotes": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
@@ -57,7 +58,7 @@
     "inquirer": "^8.1.1",
     "lint-staged": "^11.0.0",
     "next-remote-watch": "^1.0.0",
-    "prettier": "^2.5.1",
+    "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.4",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0"
