--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwind-nextjs-starter-blog",
+  "name": "parth-desai-blog",
   "version": "1.5.6",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
     "esbuild": "^0.13.13",
+    "framer-motion": "^6.3.10",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
@@ -28,6 +29,8 @@
     "preact": "^10.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
+    "react-rough-notation": "^1.0.1",
     "reading-time": "1.3.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^0.4.0",
@@ -38,8 +41,9 @@
     "remark-footnotes": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "sharp": "^0.28.3",
+    "sharp": "^0.30.5",
     "tailwindcss": "^3.0.23",
+    "typewriter-effect": "^2.18.2",
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
