--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fady-Nagh-blog",
+  "name": "Fady-Blog",
   "version": "1.5.6",
   "private": true,
   "scripts": {
@@ -25,12 +25,16 @@
     "mdx-bundler": "^8.0.0",
     "next": "12.1.4",
     "next-themes": "^0.0.14",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
     "react-rough-notation": "^1.0.1",
+    "react-scroll-progress-bar": "^1.1.13",
+    "react-share": "^4.4.0",
+    "react-social-icons": "^5.13.0",
     "reading-time": "1.3.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^0.4.0",
@@ -75,3 +79,4 @@
     ]
   }
 }
+
