--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fontsource/inter": "4.5.11",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
+    "@prisma/client": "^4.0.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
@@ -79,4 +80,3 @@
     ]
   }
 }
-
