--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sharp": "^0.30.6",
+    "swr": "^1.3.0",
     "tailwindcss": "^3.1.2",
     "typewriter-effect": "^2.18.2",
     "unist-util-visit": "^4.0.0"
